[package]
name = "rusty-ast"
version = "0.1.0"
edition = "2024"
authors = ["e-bebe"]
description = "A tool that analyzes Rust code and visualizes its AST"
license = "MIT"
repository = "https://github.com/e-bebe/rusty-ast"
keywords = ["ast", "parser", "rust", "visualization", "analysis"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "rusty-ast"
path = "src/bin/rusty-ast.rs.rs"