[package]
name = "rusty-ast"
version = "0.0.1"
edition = "2024"
authors = ["Katsuhiro Honda<freewave3@gmail.com>"]
description = "A tool that analyzes Rust code and visualizes its AST"
license = "MIT"
repository = "https://github.com/e-bebe/rusty-ast"
keywords = ["ast", "parser", "rust", "visualization", "analysis"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
syn = { version = "2.0.98", features = ["full", "visit"] }
quote = "1.0.38"
proc-macro2 = "1.0.93"
clap = { version = "4.5.31", features = ["derive"] }

[dev-dependencies]
tempfile = "3.17.1"

[[bin]]
name = "rusty-ast"
path = "src/bin/rusty-ast.rs"